--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://52.79.222.161:8080/",
+  "proxy": "http://52.79.222.161:8080",
   "name": "blog-dev-fe",
   "version": "0.1.0",
   "private": true,
